repaired broken Link comp in Headers + mod CSS to aid in visibility of popup forms

--- a/src/blocks/auth-form/__input/auth-form__input.css
+++ b/src/blocks/auth-form/__input/auth-form__input.css
@@ -21,17 +21,17 @@
   color: white;
 }
 
-::placeholder {
+.auth-form__input::placeholder {
   color: var(--input-placeholder-text-color);
   font-family: 'Inter', 'Arial', sans-serif;
 }
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
+.auth-form__input:-ms-input-placeholder { /* Internet Explorer 10-11 */
   color: var(--input-placeholder-text-color);
   font-family: 'Inter', 'Arial', sans-serif;
  }
  
- ::-ms-input-placeholder { /* Microsoft Edge */
+ .auth-form__input::-ms-input-placeholder { /* Microsoft Edge */
   color: var(--input-placeholder-text-color);
   font-family: 'Inter', 'Arial', sans-serif;
  }
